fixes issue with modal title wrapping for longer words

--- a/public/style.css
+++ b/public/style.css
@@ -184,7 +184,7 @@ button {
 .modal {
 	position: absolute;
 	z-index: 99;
-	width: 150px;
+	min-width: 150px;
 	padding: 15px;
 	border: solid 2px black;
 	border-radius: 10px;
